--- a/firebase.json
+++ b/firebase.json
@@ -13,11 +13,18 @@
       }
     ],
     "headers": [{
-        "source": "**/*.@(js|png|webmanifest|woff|woff2)",
+        "source": "**/*.@(png|webmanifest|woff|woff2)",
         "headers": [{
           "key": "Cache-Control",
           "value": "cache-control: public,max-age=31536000,immutable"
-        } ]
+        }]
+      },
+      {
+        "source": "**/*.@(js)",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=0"
+        }]
       }
     ]
   }
