--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
         "source": "**/*.@(png|webmanifest|woff|woff2)",
         "headers": [{
           "key": "Cache-Control",
-          "value": "cache-control: public,max-age=31536000,immutable"
+          "value": "max-age=60"
         }]
       },
       {
