--- a/.github/workflows/publish-firebase.yml
+++ b/.github/workflows/publish-firebase.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FJEDRE_A74A0 }}'
           channelId: live
           projectId: fjedre-a74a0
         env:
