Updated security headers.

--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,27 @@
     ],
     "headers": [
       {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Referrer-Policy",
+            "value": "no-referrer"
+          },
+          {
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
+          },
+          {
+            "key": "X-Frame-Options",
+            "value": "DENY"
+          },
+          {
+            "key": "X-XSS-protection",
+            "value": "1; mode=block"
+          }
+        ]
+      },
+      {
         "source": "**/*.@(png|webmanifest|woff|woff2)",
         "headers": [
           {
