Updated security headers.

--- a/firebase.json
+++ b/firebase.json
@@ -18,7 +18,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "connect-src 'self'; default-src 'self'; font-src 'self'; img-src 'self' data:; manifest-src 'self'; object-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; upgrade-insecure-requests;"
+            "value": "connect-src 'self'; default-src 'self'; font-src 'self'; img-src 'self' data:; manifest-src 'self'; object-src 'none'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; upgrade-insecure-requests;"
           },
           {
             "key": "Referrer-Policy",
